@@ -291,18 +291,15 @@ Krusader::Krusader() : KParts::MainWindow(), sysTray( 0 ), isStarting( true ) {
        mainView->profiles( startProfile );
    
    config->setGroup( "Private" );
-	move( oldPos = krConfig->readPointEntry( "Start Position", _StartPosition ) );
-	restoreWindowSize(config);
-	
-/*   if ( krConfig->readBoolEntry( "Maximized" ) )
-      showMaximized();
+   if ( krConfig->readBoolEntry( "Maximized" ) )
+      restoreWindowSize(config);
    else
    {
       // first, resize and move to starting point
       move( oldPos = krConfig->readPointEntry( "Start Position", _StartPosition ) );
       resize( oldSize = krConfig->readSizeEntry( "Start Size", _StartSize ) );
       show();
-   }*/
+   }
 
    // let the good times rool :)
    updateGUI( true );
@@ -655,10 +652,13 @@ void Krusader::exportKeyboardShortcuts(QString filename) {
 
 void Krusader::savePosition() {
    config->setGroup( "Private" );
-   /*config->writeEntry( "Start Position", isMaximized() ? oldPos : pos() );
-   config->writeEntry( "Start Size", isMaximized() ? oldSize : size() );
-   config->writeEntry( "Maximized", isMaximized() );*/
-	saveWindowSize(config);
+   config->writeEntry( "Maximized", isMaximized() );
+   if (isMaximized())
+      saveWindowSize(config);
+   else {
+      config->writeEntry( "Start Position", isMaximized() ? oldPos : pos() );
+      config->writeEntry( "Start Size", isMaximized() ? oldSize : size() );
+   }
    config->writeEntry( "Panel Size", mainView->vert_splitter->sizes() [ 0 ] );
    config->writeEntry( "Terminal Size", mainView->vert_splitter->sizes() [ 1 ] );
    QValueList<int> lst = mainView->horiz_splitter->sizes();
