@@ -14,6 +14,7 @@
     ADDED: import/export of keyboard shortcuts
     ADDED: mouse selection modes are back! thanks to heiner for doing the work
 
+    FIXED: crash on startup due to restoring of last size and position
     FIXED: couldn't sort case sensative on some systems (see KDE bug #40131)
     FIXED: resizing of the main window produces strange effencts
     FIXED: double dragging in Krusader and Konqueror selection modes
